# Cryptographic-Sequencer

./: .codex  .gitignore  CMakeLists.txt  README.md  RELEASE_CHECKLIST.md  prompt.txt
adapters/max/: CMakeLists.txt  README.md
adapters/max/include/: cryptoseq_max_model.h
adapters/max/javascript/: cryptoseq_clip_export.js  cryptoseq_engine_router.js  cryptoseq_midi.js  cryptoseq_sequence_view.js  cryptoseq_ui.js
adapters/max/patchers/: cryptoseq-midi-ui.maxpat  cryptoseq_engine.maxpat  cryptoseq_live_scale.maxpat
adapters/max/src/: cryptoseq_max_external.c  cryptoseq_max_external.def  cryptoseq_max_model.c
adapters/max/tests/: test_max_model.c
backups/amxd-ui-02-20260623-011103/adapters/max/javascript/: cryptoseq_midi.js
backups/refactor-20260622-233938/: README.md
backups/refactor-20260622-233938/adapters/max/: README.md
backups/refactor-20260622-233938/adapters/max/include/: cryptoseq_max_model.h
backups/refactor-20260622-233938/adapters/max/javascript/: cryptoseq_midi.js  cryptoseq_mode_view.js  cryptoseq_source_view.js  cryptoseq_ui.js
backups/refactor-20260622-233938/adapters/max/patchers/: cryptoseq_clock.maxpat  cryptoseq_engine.maxpat  cryptoseq_live_scale.maxpat  cryptoseq_midi_out.maxpat
backups/refactor-20260622-233938/adapters/max/src/: cryptoseq_max_external.c  cryptoseq_max_model.c
backups/refactor-20260622-233938/adapters/max/tests/: test_max_model.c
backups/refactor-20260622-233938/core/include/: cryptoseq.h
backups/refactor-20260622-233938/core/src/: cryptoseq.c
backups/refactor-20260622-233938/core/tests/: test_core.c
backups/remove-locks/: cryptoseq-midi-ui.maxpat.bak-remove-locks-20260630-184026
backups/runtime-fix-20260623-010023/adapters/max/javascript/: cryptoseq_midi.js  cryptoseq_ui.js
backups/runtime-fix-20260623-010023/adapters/max/src/: cryptoseq_max_external.c
core/: CMakeLists.txt
core/examples/: print_sequence.c
core/include/: cryptoseq.h
core/src/: cryptoseq.c  cryptoseq_hash.c  cryptoseq_internal.h
core/tests/: test_core.c
release/CRYPTOSEQALFA0.0/: CRYPTOSEQALFA0.0.amxd  README.md
release/CRYPTOSEQALFA0.1/: CryptoSeqALFA0.1-modular.amxd  CryptoSeqALFA0.1.amxd  CryptoSeqRangeUI.amxd  README.md
release/CRYPTOSEQALFA0.1/Cryptographic-Sequencer/: README.md
release/CRYPTOSEQALFA0.1/Cryptographic-Sequencer/javascript/: cryptoseq_rsa_view.js  cryptoseq_sequence_view.js  cryptoseq_source_view.js  cryptoseq_ui.js
release/CRYPTOSEQALFA0.1/Cryptographic-Sequencer/patchers/: cryptoseq-midi-ui.maxpat  cryptoseq-test.maxpat  cryptoseq_auto_setup.maxpat  cryptoseq_engine.maxpat  cryptoseq_live_scale.maxpat  cryptoseq_midi_out.maxpat
release/CRYPTOSEQALFA0.1/javascript/: cryptoseq_live_scale.js  cryptoseq_midi.js
release/CRYPTOSEQALFA0.1/patchers/: cryptoseq-midi-ui.maxpat
release/Cryptographic-Sequencer-MaxPackage/Cryptographic-Sequencer/: README.md
release/Cryptographic-Sequencer-MaxPackage/Cryptographic-Sequencer/javascript/: cryptoseq_live_scale.js  cryptoseq_midi.js  cryptoseq_performance_view.js  cryptoseq_sequence_view.js  cryptoseq_ui.js
release/Cryptographic-Sequencer-MaxPackage/Cryptographic-Sequencer/patchers/: cryptoseq-midi-ui.maxpat
release/max-for-live/: CryptoSeq.amxd  CryptoSeq4Testing.amxd  CryptoSeq4Testing_patched.amxd  CryptoSeqALFA0.1-modular.amxd  CryptoSeqRangeUI.amxd  PRESETS.md  README.md
release/max-for-live/javascript/: cryptoseq_clip_export.js  cryptoseq_sequence_view.js  cryptoseq_source_view.js  cryptoseq_ui.js
release/max-for-live/patchers/: cryptoseq_clock.maxpat  cryptoseq_engine.maxpat
tools/: Add-CryptoSeqClipExport.ps1  Add-CryptoSeqCrtSplit.ps1  Dump-AmxdControls.ps1  Dump-AmxdPatchlines.ps1  Dump-CryptoSeqMaxParams.ps1  Inspect-AmxdPatchcords.ps1  Install-CryptoSeqAbletonPreset.ps1  Patch-CryptoSeqAmxdControls.ps1  Patch-CryptoSeqAmxdStartupAndPerformance.ps1  README.md  Remove-CryptoSeqLocks.ps1  Repair-AmxdMissingPatchcords.ps1  Set-CryptoSeqParameterDefaults.ps1  Set-CryptoSeqParameterPersistence.ps1  Test-CryptoSeqRelease.ps1  Update-CryptoSeqAmxd.ps1
